fix a bug in jump